# firds-rs

./: Cargo.toml  README.md  product.rs.bak
firds/: Cargo.toml
firds-dl/: Cargo.toml
firds-dl/src/: download.rs  error.rs  lib.rs  main.rs
firds-xml/: Cargo.toml
firds-xml/src/: error.rs  from_xml.rs
firds/src/: categories.rs  error.rs  iter_xml.rs  lib.rs  main.rs  model.rs  parse_utils.rs
sql/: schema.sql
src/: categories.rs  enums.rs  error.rs  lib.rs  main.rs  model.rs  product.rs  product_enums.rs  xml_utils.rs
src/download/: error.rs  main.rs  mod.rs
src/sql/: error.rs  from_row.rs  mod.rs  to_db.rs
src/xml/: error.rs  from_xml.rs  iter_xml.rs  mod.rs  parse_utils.rs
