[package]
name = "firds-dl"
edition = "2021"

[dependencies]
strum = "0.27.1"
chrono = "0.4.41"
serde_json = "1.0.140"
strum_macros = "0.27.1"
reqwest = { version = "0.12.15", features = ["stream"] }
futures-util = "0.3.31"
md-5 = "0.11.0-pre.5"
base16ct = { version = "0.2.0", features = ["alloc"] }