[package]
name = "firds-dl"
edition = "2021"

[dependencies]
chrono = "0.4.41"
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["stream", "json"] }
futures-util = "0.3.31"
md-5 = "0.11.0-pre.5"
base16ct = { version = "0.2.0", features = ["alloc"] }
zip = "4.0.0"
url = "2.5.4"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.5.38", features = ["derive"] }
log = "0.4.27"
futures = "0.3.31"
indicatif = { version = "0.17.11", features = ["futures"], optional = true }

[features]
cli = ["indicatif"]

[[bin]]
name = "firds-dl"
path = "src/main.rs"
required-features = ["cli"]

